[package]
name = "helloworld-tonic"
version = "0.1.0"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }


[build-dependencies]
tonic-build = "0.3"
