[package]
name = "helloworld-tonic"
version = "0.1.0"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt"] }


[build-dependencies]
tonic-build = "0.8"
