[package]
name = "http-stream"
version = "0.1.0"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "runtime", "http1", "stream"]}
hyper-tls = "0.5"
tokio = { version = "1.0", features = ["macros", "rt"]}
futures-util = { version = "0.3"}
futures-core = { version = "0.3"}
