[package]
name = "quick_sort"
version = "0.1.0"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.4"


[[bench]]
name = "quick_sort_benchmark"
harness = false
