[package]
name = "tokio-block-on"
version = "0.1.0"
authors = ["Abhijit Gadgil <gabhijit@iitbombay.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
